templates/talend_securitygroups.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Provide standard Talend Security Groups and QuickstartS3URL",
    "Parameters": {
        "VpcId": {
            "Description": "VPC to which security groups belong",
            "Type": "String"
        },
        "SSHLocation": {
            "Description": "The IP address range that can be used to access the Talend servers using SSH.",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        }
    },
    "Mappings": {
    },
    "Conditions": {
    },
    "Resources": {
        "TacSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": { "Ref": "VpcId" },
                "GroupDescription": "Allow access from HTTP and SSH traffic",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8080",
                        "ToPort": "8080",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8081",
                        "ToPort": "8081",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "9200",
                        "ToPort": "9200",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "5601",
                        "ToPort": "5601",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "8085",
                        "ToPort": "8085",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    }
                ]
            }
        },
        "TacSecurityGroupIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "TacSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "TacSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "TacSecurityGroup"
                }
            }
        },
        "TacSecurityGroupJobserverIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "TacSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "TacSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "JobserverSecurityGroup"
                }
            }
        },
        "TacSecurityGroupIngressICMP": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "TacSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "TacSecurityGroup"
                },
                "IpProtocol": "icmp",
                "FromPort": "-1",
                "ToPort": "-1",
                "SourceSecurityGroupId": {
                    "Ref": "TacSecurityGroup"
                }
            }
        },
        "JobserverSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": { "Ref": "VpcId" },
                "GroupDescription": "Job Server Security Group needs to include TAC and Nexus",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    }
                ]
            }
        },
        "JobserverSecurityGroupIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "JobserverSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "JobserverSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "JobserverSecurityGroup"
                }
            }
        },
        "JobserverSecurityGroupTacIngress": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "JobserverSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "JobserverSecurityGroup"
                },
                "IpProtocol": "tcp",
                "FromPort": "0",
                "ToPort": "65535",
                "SourceSecurityGroupId": {
                    "Ref": "TacSecurityGroup"
                }
            }
        },
        "JobserverSecurityGroupIngressICMP": {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "DependsOn": "JobserverSecurityGroup",
            "Properties": {
                "GroupId": {
                    "Ref": "JobserverSecurityGroup"
                },
                "IpProtocol": "icmp",
                "FromPort": "-1",
                "ToPort": "-1",
                "SourceSecurityGroupId": {
                    "Ref": "JobserverSecurityGroup"
                }
            }
        }
    },
    "Outputs": {
        "TacSecurityGroup": {
            "Description": "TAC security group.",
            "Value": { "Ref": "TacSecurityGroup" },
            "Export": { "Name": { "Fn::Sub": "${AWS::StackName}:TacSecurityGroup" } }
        },
        "JobserverSecurityGroup": {
            "Description": "Jobserver security group.",
            "Value": { "Ref": "JobserverSecurityGroup" },
            "Export": { "Name": { "Fn::Sub": "${AWS::StackName}:JobserverSecurityGroup" } }
        }
    }
}
